--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
-  <table class="container">
+  <table class="container ticTacBoard">
     <tr>
       <td id="grid-1" class=""><span></span></td>
       <td id="grid-2" class="vertical"><span></span></td>
@@ -26,18 +26,20 @@
       <td id="grid-9" class="top"><span></span></td>
     </tr>
   </table>
-  <div class="scoreBored container">
-    <div class="score">
-      <h3>Player 1 (X)</h3>
-      <p class="firstPlayerScore"></p>
-    </div>
-    <div class="score">
-      <h3>Tie</h3>
-      <p class="tieScore"></p>
-    </div>
-    <div class="score">
-      <h3>Player 2 (O)</h3>
-      <p class="secondPlayerScore"></p>
+  <div class="container">
+    <div class="scoreBored">
+      <div class="score">
+        <h3>Player 1 (X)</h3>
+        <p class="firstPlayerScore"></p>
+      </div>
+      <div class="score">
+        <h3>Tie</h3>
+        <p class="tieScore"></p>
+      </div>
+      <div class="score">
+        <h3>Player 2 (O)</h3>
+        <p class="secondPlayerScore"></p>
+      </div>
     </div>
   </div>
   <script src="app.js"></script>
