--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
       <td id="grid-9" class="top"><span></span></td>
     </tr>
   </table>
-  <div class="container">
-    <div class="scoreBored">
-      <div class="score">
-        <h3>Player 1 (X)</h3>
-        <p class="firstPlayerScore"></p>
-      </div>
-      <div class="score">
-        <h3>Tie</h3>
-        <p class="tieScore"></p>
-      </div>
-      <div class="score">
-        <h3>Player 2 (O)</h3>
-        <p class="secondPlayerScore"></p>
-      </div>
+  <div class="scoreBored container">
+    <div class="score">
+      <h3>Player 1 (X)</h3>
+      <p class="firstPlayerScore"></p>
+    </div>
+    <div class="score">
+      <h3>Tie</h3>
+      <p class="tieScore"></p>
+    </div>
+    <div class="score">
+      <h3>Player 2 (O)</h3>
+      <p class="secondPlayerScore"></p>
     </div>
   </div>
   <script src="app.js"></script>
