--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <td id="grid-9" class="top"><span></span></td>
     </tr>
   </table>
-  <div class="scoreBored container">
+  <div class="scoreBoard">
     <div class="score">
       <h3>Player 1 (X)</h3>
       <p class="firstPlayerScore"></p>
